// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemDetailInfoBar /> should render correctly 1`] = `
<ItemDetailInfoBar
  portfolio={
    Object {
      "display_name": "baz",
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
      "distributor": "foo",
      "service_offering_source_ref": "111",
      "updated_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
    }
  }
  source={
    Object {
      "id": "111",
      "name": "bar",
    }
  }
>
  <Component
    className="pf-u-mb-md"
  >
    <div
      className="pf-c-content pf-u-mb-md"
    >
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Platform
        </p>
      </Component>
      <Component
        className="overflow-wrap"
        component="p"
        id="source-name"
      >
        <p
          className="overflow-wrap"
          data-pf-content={true}
          id="source-name"
        >
          bar
        </p>
      </Component>
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Portfolio
        </p>
      </Component>
      <Component
        className="overflow-wrap"
        component="p"
        id="portfolio-name"
      >
        <p
          className="overflow-wrap"
          data-pf-content={true}
          id="portfolio-name"
        >
          quux
        </p>
      </Component>
      <span
        id="distributor"
      >
        <Component
          className="font-14"
        >
          <p
            className="font-14"
            data-pf-content={true}
          >
            Vendor
          </p>
        </Component>
        <Component
          className="overflow-wrap"
          component="p"
        >
          <p
            className="overflow-wrap"
            data-pf-content={true}
          >
            foo
          </p>
        </Component>
      </span>
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Created
        </p>
      </Component>
      <Component
        component="p"
        id="created_at"
      >
        <p
          className=""
          data-pf-content={true}
          id="created_at"
        >
          <DateFormat
            date="Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)"
            variant="relative"
          >
            <Tooltip
              appendTo={[Function]}
              aria="describedby"
              boundary="window"
              className=""
              content={
                <div>
                  
                  22 Mar 2019 07:36 UTC
                </div>
              }
              distance={15}
              enableFlip={true}
              entryDelay={500}
              exitDelay={500}
              flipBehavior={
                Array [
                  "top",
                  "right",
                  "bottom",
                  "left",
                  "top",
                  "right",
                  "bottom",
                ]
              }
              id=""
              isAppLauncher={false}
              isContentLeftAligned={false}
              isVisible={false}
              maxWidth="18.75rem"
              position="top"
              tippyProps={Object {}}
              trigger="mouseenter focus"
              zIndex={9999}
            >
              <PopoverBase
                appendTo={[Function]}
                aria="describedby"
                arrow={true}
                boundary="window"
                content={
                  <div
                    className=""
                    id=""
                    role="tooltip"
                  >
                    <Unknown
                      isLeftAligned={false}
                    >
                      <div>
                        
                        22 Mar 2019 07:36 UTC
                      </div>
                    </Unknown>
                  </div>
                }
                delay={
                  Array [
                    500,
                    500,
                  ]
                }
                distance={15}
                flip={true}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                isVisible={false}
                lazy={true}
                maxWidth="18.75rem"
                onCreate={[Function]}
                placement="top"
                popperOptions={
                  Object {
                    "modifiers": Object {
                      "hide": Object {
                        "enabled": true,
                      },
                      "preventOverflow": Object {
                        "enabled": true,
                      },
                    },
                  }
                }
                theme="pf-tooltip"
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <span>
                  Just now
                </span>
                <Portal
                  containerInfo={
                    <div>
                      <div
                        class=""
                        id=""
                        role="tooltip"
                      >
                        <div
                          class="pf-c-tooltip__content"
                        >
                          <div>
                            
                            22 Mar 2019 07:36 UTC
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <div
                    className=""
                    id=""
                    role="tooltip"
                  >
                    <Component
                      isLeftAligned={false}
                    >
                      <div
                        className="pf-c-tooltip__content"
                      >
                        <div>
                          22 Mar 2019 07:36 UTC
                        </div>
                      </div>
                    </Component>
                  </div>
                </Portal>
              </PopoverBase>
            </Tooltip>
          </DateFormat>
        </p>
      </Component>
    </div>
  </Component>
</ItemDetailInfoBar>
`;

exports[`<ItemDetailInfoBar /> should render correctly with fallback values without vendor 1`] = `
<ItemDetailInfoBar
  portfolio={
    Object {
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
      "service_offering_source_ref": "111",
    }
  }
  source={
    Object {
      "id": "111",
      "name": "bar",
    }
  }
>
  <Component
    className="pf-u-mb-md"
  >
    <div
      className="pf-c-content pf-u-mb-md"
    >
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Platform
        </p>
      </Component>
      <Component
        className="overflow-wrap"
        component="p"
        id="source-name"
      >
        <p
          className="overflow-wrap"
          data-pf-content={true}
          id="source-name"
        >
          bar
        </p>
      </Component>
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Portfolio
        </p>
      </Component>
      <Component
        className="overflow-wrap"
        component="p"
        id="portfolio-name"
      >
        <p
          className="overflow-wrap"
          data-pf-content={true}
          id="portfolio-name"
        >
          quux
        </p>
      </Component>
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Created
        </p>
      </Component>
      <Component
        component="p"
        id="created_at"
      >
        <p
          className=""
          data-pf-content={true}
          id="created_at"
        >
          <DateFormat
            date="Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)"
            variant="relative"
          >
            <Tooltip
              appendTo={[Function]}
              aria="describedby"
              boundary="window"
              className=""
              content={
                <div>
                  
                  22 Mar 2019 07:36 UTC
                </div>
              }
              distance={15}
              enableFlip={true}
              entryDelay={500}
              exitDelay={500}
              flipBehavior={
                Array [
                  "top",
                  "right",
                  "bottom",
                  "left",
                  "top",
                  "right",
                  "bottom",
                ]
              }
              id=""
              isAppLauncher={false}
              isContentLeftAligned={false}
              isVisible={false}
              maxWidth="18.75rem"
              position="top"
              tippyProps={Object {}}
              trigger="mouseenter focus"
              zIndex={9999}
            >
              <PopoverBase
                appendTo={[Function]}
                aria="describedby"
                arrow={true}
                boundary="window"
                content={
                  <div
                    className=""
                    id=""
                    role="tooltip"
                  >
                    <Unknown
                      isLeftAligned={false}
                    >
                      <div>
                        
                        22 Mar 2019 07:36 UTC
                      </div>
                    </Unknown>
                  </div>
                }
                delay={
                  Array [
                    500,
                    500,
                  ]
                }
                distance={15}
                flip={true}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                isVisible={false}
                lazy={true}
                maxWidth="18.75rem"
                onCreate={[Function]}
                placement="top"
                popperOptions={
                  Object {
                    "modifiers": Object {
                      "hide": Object {
                        "enabled": true,
                      },
                      "preventOverflow": Object {
                        "enabled": true,
                      },
                    },
                  }
                }
                theme="pf-tooltip"
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <span>
                  Just now
                </span>
                <Portal
                  containerInfo={
                    <div>
                      <div
                        class=""
                        id=""
                        role="tooltip"
                      >
                        <div
                          class="pf-c-tooltip__content"
                        >
                          <div>
                            
                            22 Mar 2019 07:36 UTC
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <div
                    className=""
                    id=""
                    role="tooltip"
                  >
                    <Component
                      isLeftAligned={false}
                    >
                      <div
                        className="pf-c-tooltip__content"
                      >
                        <div>
                          22 Mar 2019 07:36 UTC
                        </div>
                      </div>
                    </Component>
                  </div>
                </Portal>
              </PopoverBase>
            </Tooltip>
          </DateFormat>
        </p>
      </Component>
    </div>
  </Component>
</ItemDetailInfoBar>
`;

exports[`<ItemDetailInfoBar /> should render correctly with vendor 1`] = `
<ItemDetailInfoBar
  distributor="Foo distributor"
  portfolio={
    Object {
      "display_name": "baz",
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
      "distributor": "foo",
      "service_offering_source_ref": "111",
      "updated_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
    }
  }
  source={
    Object {
      "id": "111",
      "name": "bar",
    }
  }
>
  <Component
    className="pf-u-mb-md"
  >
    <div
      className="pf-c-content pf-u-mb-md"
    >
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Platform
        </p>
      </Component>
      <Component
        className="overflow-wrap"
        component="p"
        id="source-name"
      >
        <p
          className="overflow-wrap"
          data-pf-content={true}
          id="source-name"
        >
          bar
        </p>
      </Component>
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Portfolio
        </p>
      </Component>
      <Component
        className="overflow-wrap"
        component="p"
        id="portfolio-name"
      >
        <p
          className="overflow-wrap"
          data-pf-content={true}
          id="portfolio-name"
        >
          quux
        </p>
      </Component>
      <span
        id="distributor"
      >
        <Component
          className="font-14"
        >
          <p
            className="font-14"
            data-pf-content={true}
          >
            Vendor
          </p>
        </Component>
        <Component
          className="overflow-wrap"
          component="p"
        >
          <p
            className="overflow-wrap"
            data-pf-content={true}
          >
            foo
          </p>
        </Component>
      </span>
      <Component
        className="font-14"
      >
        <p
          className="font-14"
          data-pf-content={true}
        >
          Created
        </p>
      </Component>
      <Component
        component="p"
        id="created_at"
      >
        <p
          className=""
          data-pf-content={true}
          id="created_at"
        >
          <DateFormat
            date="Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)"
            variant="relative"
          >
            <Tooltip
              appendTo={[Function]}
              aria="describedby"
              boundary="window"
              className=""
              content={
                <div>
                  
                  22 Mar 2019 07:36 UTC
                </div>
              }
              distance={15}
              enableFlip={true}
              entryDelay={500}
              exitDelay={500}
              flipBehavior={
                Array [
                  "top",
                  "right",
                  "bottom",
                  "left",
                  "top",
                  "right",
                  "bottom",
                ]
              }
              id=""
              isAppLauncher={false}
              isContentLeftAligned={false}
              isVisible={false}
              maxWidth="18.75rem"
              position="top"
              tippyProps={Object {}}
              trigger="mouseenter focus"
              zIndex={9999}
            >
              <PopoverBase
                appendTo={[Function]}
                aria="describedby"
                arrow={true}
                boundary="window"
                content={
                  <div
                    className=""
                    id=""
                    role="tooltip"
                  >
                    <Unknown
                      isLeftAligned={false}
                    >
                      <div>
                        
                        22 Mar 2019 07:36 UTC
                      </div>
                    </Unknown>
                  </div>
                }
                delay={
                  Array [
                    500,
                    500,
                  ]
                }
                distance={15}
                flip={true}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                isVisible={false}
                lazy={true}
                maxWidth="18.75rem"
                onCreate={[Function]}
                placement="top"
                popperOptions={
                  Object {
                    "modifiers": Object {
                      "hide": Object {
                        "enabled": true,
                      },
                      "preventOverflow": Object {
                        "enabled": true,
                      },
                    },
                  }
                }
                theme="pf-tooltip"
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <span>
                  Just now
                </span>
                <Portal
                  containerInfo={
                    <div>
                      <div
                        class=""
                        id=""
                        role="tooltip"
                      >
                        <div
                          class="pf-c-tooltip__content"
                        >
                          <div>
                            
                            22 Mar 2019 07:36 UTC
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <div
                    className=""
                    id=""
                    role="tooltip"
                  >
                    <Component
                      isLeftAligned={false}
                    >
                      <div
                        className="pf-c-tooltip__content"
                      >
                        <div>
                          22 Mar 2019 07:36 UTC
                        </div>
                      </div>
                    </Component>
                  </div>
                </Portal>
              </PopoverBase>
            </Tooltip>
          </DateFormat>
        </p>
      </Component>
    </div>
  </Component>
</ItemDetailInfoBar>
`;
